# xray-proxy-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo.py
src/xray_proxy_manager/: __init__.py  config.py  core.py  manager.py  subscription.py
